--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     --color-moradoscuro: #A855F7;
     --color-text-color: #f8fafc;
     --color-gris: #9CA3AF;
+    --color-grish: #101010;
     --color-bordeui: #292348;
     --color-Base: #020202;
     --font-texto: 'Lato', sans-serif;
@@ -14,6 +15,7 @@
     --font-space: "Space Grotesk", sans-serif;
     --color-borde: #111111;
     --color-nav: #cfd3d9;
+
     --background-image-space-gradient: radial-gradient(circle at center, #1b1436 0%, #050505 100%);
 }
 
@@ -28,6 +30,7 @@
     --text-color: #f8fafc;
     --gris: #9CA3AF;
     --bordeui: #292348;
+    --gris-10: #101010;
 
 }
 
@@ -70,4 +73,27 @@ h3 {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #4b2bee;
+}
+
+.card1 {
+    background-color: #0a0a0a;
+    border: 1px solid #151414;
+    border-radius: 12px;
+}
+
+.card2 {
+    background-color: #0f0b1e;
+    border: 1px solid #241f41;
+    border-radius: 12px;
+}
+
+
+
+.card-hover {
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.card-hover:hover {
+    transform: scale(1.05);
 }
